# jobhouse

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.backup.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
dags/: extract_raw_jobs.py
docs/: Pipeline Architecture.mermaid
src/: main.py  oauth.py  oauth_server.py  refresh_token_oauth.py
src/common/: data.py
src/extract/: async_client.py  hh_api.py
src/jobhouse/: main.py
src/jobhouse/extract/: hh_api.py
src/jobhouse/storage/: raw_layer.py
src/storage/: raw_layer.py
