[project]
name = "jobhouse"
version = "0.1.0"
description = "Job Market Lakehouse Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=13.2.0",
    "aiohttp>=3.10.10",
    "aiopg>=1.4.0",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "playwright>=1.48.0",
    "pydantic-settings>=2.6.0",
    "python-telegram-bot>=21.6",
    "sqlalchemy>=2.0.36",
    "structlog>=24.4.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
