[project]
name = "jobhouse"
version = "0.1.0"
description = "Job Market Lakehouse Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=13.2.0",
    "aiohttp>=3.10.10",
    "aiopg>=1.4.0",
    "apache-airflow>=2.10.4",
    "apache-airflow-providers-amazon>=8.29.0",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "flask>=2.2.1",
    "playwright>=1.48.0",
    "pydantic-settings>=2.6.0",
    "python-telegram-bot>=21.6",
    "requests>=2.32.3",
    "sqlalchemy>=1.4.54",
    "structlog>=24.4.0",
]

[project.scripts]
jobhouse = "jobhouse.main:main"

[build-system]
requires = ["uv>=0.1.0"]
build-backend = "uv.build:build"

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
